refactor(order): 주문 생성 보상 흐름과 입력 검증 정리